--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@
     transform: translate(-50%, -50%);
 }
 
+body{
+    background-color: black;
+}
+
 button {
    visibility:visible;
     top: 250px;
@@ -37,6 +41,74 @@ button {
     position: relative;
     
 }
+
+#startmenubuttons
+{
+    transform: translate(0,-35%);
+    width:200px;
+}
+
+
+#beltButton
+{
+ visibility: hidden;
+  top: 0%;
+  left:100%;
+  height: 20px;
+  width: 20px;
+  background: white;
+  transform: translate(-100%, 0);
+}
+
+.beltItem
+{
+  top: 100%;
+    transform: translate(0, 50%);
+    margin:1px;
+    font-size: 10px;
+   font-weight: 900;
+   text-align: center;
+   color: black;
+   background: white;
+    display: none;   
+    width: 50px;
+    height: 50px;
+   
+}
+/* #smoke 
+{ 
+   
+    background: rgb(0, 255, 94);
+}
+
+#gun 
+{ 
+   
+    background: red;
+}
+
+#nade
+ {
+   
+    background: rgb(0, 17, 255);
+}
+#tool 
+{ 
+   
+    background: rgb(255, 225, 0);
+} */
+
+
+.belt
+{
+ width: 100px;
+ height: 100px;
+ grid-template-columns:50px 50px ;
+ display: grid;
+ transform: translate(50%, -50%);
+}
+
+
 
 
 
